--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-VITE_API_URL=http://localhost:8000
+VITE_API_URL_USERS=https://monkfish-app-z9uza.ondigitalocean.app/bcard2/users
+VITE_API_URL_CARDS= https://monkfish-app-z9uza.ondigitalocean.app/bcard2/cards
